--- a/m4r/views/extractives_controls.erb
+++ b/m4r/views/extractives_controls.erb
@@ -3,21 +3,21 @@
 </style>
 <ul id="extractives_menu" class="map-options dropmenu">
   <li class="sectors"><span>EXTRACTIVES: </span></li>
-  <li><a href="#" id="layercontrol_projects" class="arwOrange" onclick="return wb.setExtractiveIndicator('none',false)">Mines Production</a>
+  <li><a href="#" id="layercontrol_extractives" class="arwOrange" >Mines Production</a>
     <ul class="dropmenu_options">
       <li class="dropmenu_category">Mines</li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total production',true); return false">Production</a></li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total company payments',true); return false">Company Payments</a></li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total government receipts',true); return false">Government Receipts</a></li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Icons',true); return false">Location</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total production','Production',true); return false">Production</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total company payments','Company Payments',true); return false">Company Payments</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total government receipts','Government Receipts',true); return false">Government Receipts</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Icons','Location',true); return false">Location</a></li>
 
       <li class="dropmenu_category">District Revenues</li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('District revenues','Total revenues received',true); return false">Revenues</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('District revenues','Total revenues received','Revenues',true); return false">Revenues</a></li>
 
       <li class="dropmenu_category">Oil Wells</li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Lift total',true); return false">Production</a></li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Sale total',true); return false">Oil sales</a></li>
-      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Location',true); return false">Location</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Lift total','Production',true); return false">Production</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Sale total','Oil sales',true); return false">Oil sales</a></li>
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Oil wells','Location','Location',true); return false">Location</a></li>
     </ul>
   </li>
 </ul>
@@ -26,39 +26,39 @@
   <div id="map-content-icons2">
     <ul id="mines_sectors">
       <li style="margin-left: 11px; margin-right: 11px;">Mines:</li>
-      <li class="egoldmine"><a  sector-name="gold" original-title="Gold" class="sectorcontrol inactive" id="sector_mine_gold" href="#">1</a></li>
-      <li class="emanganesemine"><a  sector-name="manganese" original-title="Magnanese" class="sectorcontrol inactive" id="sector_mine_manganese" href="#">2</a></li>
-      <li class="ebauxitemine"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="sector_mine_bauxite" href="#">3</a></li>
-      <li class="eothermine"><a  sector-name="other" original-title="Other" class="sectorcontrol inactive" id="sector_mine_other" href="#">3</a></li>
+      <li class="egoldmine"><a  sector-name="gold" original-title="Gold" class="sectorcontrol inactive" id="Goldmine_control" href="#">1</a></li>
+      <li class="emanganesemine"><a  sector-name="manganese" original-title="Manganese" class="sectorcontrol inactive" id="Manganesemine_control" href="#">2</a></li>
+      <li class="ebauxitemine"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="Bauxitemine_control" href="#">3</a></li>
+      <li class="eothermine"><a  sector-name="other" original-title="Other" class="sectorcontrol inactive" id="Othermine_control" href="#">3</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
       <li class="s11"><form action="" method="get">
-        <input name="input" id="minesall" class="" type="checkbox" value=""/>
+        <input name="input" id="allmine_control" class="active" type="checkbox" value=""/>
       </form></li>
-      <li class="all">ALL</li>
+      <li id="" class="all">ALL</li>
       <% end %>
     </ul>
     <ul id="ore_sectors">
       <li style="margin-left: 11px; margin-right: 11px;">Ores:</li>
-      <li class="egolddeposit"><a  sector-name="gold" original-title="Gold" class="sectorcontrol inactive" id="" href="#">1</a></li>
-      <li class="emanganesedeposit"><a  sector-name="manganese" original-title="Magnanese" class="sectorcontrol inactive" id="" href="#">2</a></li>
-      <li class="ebauxitedeposit"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="" href="#">3</a></li>
-      <li class="eotherdeposit"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="" href="#">3</a></li>
+      <li class="egolddeposit"><a  sector-name="gold" original-title="Gold" class="sectorcontrol inactive" id="Golddeposit_control" href="#">1</a></li>
+      <li class="emanganesedeposit"><a  sector-name="manganese" original-title="Manganese" class="sectorcontrol inactive" id="Manganesedeposit_control" href="#">2</a></li>
+      <li class="ebauxitedeposit"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="Bauxitedeposit_control" href="#">3</a></li>
+      <li class="eotherdeposit"><a  sector-name="other" original-title="Other" class="sectorcontrol inactive" id="Otherdeposit_control" href="#">3</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
       <li class="s11"><form action="" method="get">
-        <input name="input" id="oresall" class="" type="checkbox" value=""/>
+        <input name="input" id="alldeposit_control" class="inactive" type="checkbox" value=""/>
       </form></li>
-      <li class="all">ALL</li>
+      <li id="" class="all">ALL</li>
       <% end %>
     </ul> 
     <ul id="oil_sectors">
-      <li style="margin-left: 11px; margin-right: 11px;">Ores:</li>
-      <li class="eoildeposit"><a  sector-name="gold" original-title="Oil Deposit" class="sectorcontrol inactive" id="" href="#">1</a></li>
-      <li class="eoilwell"><a  sector-name="manganese" original-title="Oil Well" class="sectorcontrol inactive" id="" href="#">2</a></li>
+      <li style="margin-left: 11px; margin-right: 11px;">Oil:</li>
+      <li class="eoildeposit"><a  sector-name="oildeposit" original-title="Oil fields" class="sectorcontrol inactive" id="oildeposits_control" href="#">1</a></li>
+      <li class="eoilwell"><a  sector-name="oilwell" original-title="Oil wells" class="sectorcontrol inactive" id="oilwells_control" href="#">2</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
       <li class="s11"><form action="" method="get">
-        <input name="input" id="oilall" class="" type="checkbox" value=""/>
+        <input name="input" id="alloil_control" class="active" type="checkbox" value=""/>
       </form></li>
-      <li class="all">ALL</li>
+      <li id="" class="all">ALL</li>
       <% end %>
     </ul>              
   </div>
