--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - Mapping for Results' %></title>
+    <title><%= @page_title = (@page_subtitle || "") + 'The World Bank - ' + @title || "Mapping for Results" %></title>
     <meta name="description" content="<%= @page.hierarchy.reverse.collect {|c| c.name}.join(",") %>,health,poverty,millenium developemnt goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +68,7 @@
                 </ul>
             </div><!--.navigation//-->
             <div id="local" class="clearfix">
-            	<div class="site-name"><a class="active" href="/">Mapping for Results</a></div>
+            	<div class="site-name"><a class="active" href="/"><%= @title || "Mapping for Results" %></a></div>
             </div>
         </div><!--#header//-->
         <div id="main-wrap">
