--- a/m4r/views/sidebar.erb
+++ b/m4r/views/sidebar.erb
@@ -1,4 +1,5 @@
 <div class="rightCol clearfix" id="rightCol">
+    <% unless defined?(@additional_controls) %>
   <div id="rightHdr"><a class="mag-glass" href="#"></a></div>
   <div id="rightInfo" class="clearfix">
     <h3 class="clearfix"><span class="rightHdr">FINANCED ACTIVITIES BY SECTOR</span> <a class="arwOrange" style="display:none" href="javascript: return false;">BY SECTOR</a></h3>
@@ -23,6 +24,7 @@
     <a class="moreData" href="http://data.worldbank.org/country/<%= @page[:shortname] %>" title="more data">MORE DATA</a>
     <br class="clear" />
   </div>
+<% end %>  
   <div id="rightDesc">
       <% if @page.data.include?(:results) && !@page.data[:results].nil? && @page.data[:results].length > 0 %>
       <h3><%= @page[:name].upcase %> LINKS</h3>
