--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -1087,7 +1087,7 @@ if(typeof(F1)=='undefined') {F1 = {};}
             self.toggleExtractive("Mines","all", true)
             self.toggleExtractive("Mineral deposits","all", false)
             self.toggleExtractive("Oil fields","all", true)     
-            self.map.swf.setStyle( { zoom: {bgColor: 0x92948C, authHeight: false, height:10, cornerRadius: 5, expanded: false, horizontal: true, offset: {x:15,y:80}}})
+            self.map.swf.setStyle( { offset: {x:15,y:80}}} )
                    
         }
         jq("#map-summary").show();
