--- a/m4r/views/extractives_controls.erb
+++ b/m4r/views/extractives_controls.erb
@@ -1,5 +1,6 @@
 <style type="text/css" media="screen">
 #activities_menu {display: none;}
+.all {display:none}
 </style>
 <ul id="extractives_menu" class="map-options dropmenu">
   <li class="sectors"><span>EXTRACTIVES: </span></li>
@@ -31,7 +32,7 @@
       <li class="ebauxitemine"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol active" id="Bauxitemine_control" href="#">3</a></li>
       <li class="eothermine"><a  sector-name="other" original-title="Other" class="sectorcontrol active" id="Othermine_control" href="#">3</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
-      <li class="s11"><form action="" method="get">
+      <li class="all"><form action="" method="get">
         <input name="input" id="allmine_control" class="active" type="checkbox" value="" CHECKED/>
       </form></li>
       <li id="" class="all">ALL</li>
@@ -44,7 +45,7 @@
       <li class="ebauxitedeposit"><a  sector-name="bauxite" original-title="Bauxite" class="sectorcontrol inactive" id="Bauxitedeposit_control" href="#">3</a></li>
       <li class="eotherdeposit"><a  sector-name="other" original-title="Other" class="sectorcontrol inactive" id="Otherdeposit_control" href="#">3</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
-      <li class="s11"><form action="" method="get">
+      <li class="all"><form action="" method="get">
         <input name="input" id="alldeposit_control" class="inactive" type="checkbox" value=""/>
       </form></li>
       <li id="" class="all">ALL</li>
@@ -55,7 +56,7 @@
       <li class="eoildeposit"><a  sector-name="oildeposit" original-title="Oil fields" class="sectorcontrol active" id="oildeposits_control" href="#">1</a></li>
       <li class="eoilwell"><a  sector-name="oilwell" original-title="Oil wells" class="sectorcontrol active" id="oilwells_control" href="#">2</a></li>
       <% if (params[:controls] || false).to_s != "true" %>
-      <li class="s11"><form action="" method="get">
+      <li class="all"><form action="" method="get">
         <input name="input" id="alloil_control" class="active" type="checkbox" value="" CHECKED/>
       </form></li>
       <li id="" class="all">ALL</li>
