--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -1,7 +1,7 @@
 <div class="static_display">
   <h4><%= @page_subtitle = @page.name %></h4>
   <ul style="float:right">
-  <% @about_parent = Page.first(:page_type => "page", :short_name = "about")
+  <% @about_parent = Page.first(:page_type => "page", :shortname => "about") %>
     <% @about_parent.children.each do |about_page| %>
     <li><a href="<%= about_page.url == 'about' ? '' : '/about' %><%= about_page.url %>"><%= about_page.name %></a></li>
     <% end %>
