--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -70,6 +70,7 @@
     </div>
     <%# partial :highlights  %>
     <%= partial :footer %>
+    <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
     </div>
 <!-- /#wrapper -->
 <!-- /layout -->
