Adding locations with a simple icon

--- a/m4r/views/extractives_controls.erb
+++ b/m4r/views/extractives_controls.erb
@@ -10,7 +10,7 @@
       <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total production','Production',true); return false">Production</a></li>
       <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total company payments','Company Payments',true); return false">Company Payments</a></li>
       <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Total government receipts','Government Receipts',true); return false">Government Receipts</a></li>
-      <!-- <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Icons','Location',true); return false">Location</a></li> -->
+      <li><a href="#" onclick="wb.setExtractiveIndicator('Mines','Location','Location',true); return false">Location</a></li>
 
       <li class="dropmenu_category">District Revenues</li>
       <li><a href="#" onclick="wb.setExtractiveIndicator('District revenues','Total revenues received','Revenues',true); return false">Revenues</a></li>
