--- a/m4r/views/global_navigation.erb
+++ b/m4r/views/global_navigation.erb
@@ -1,5 +1,5 @@
               <ul class="worldmenu dropmenu">
-                <li class="first"><a href="javascript:return false;" style="<%= @page[:name].length > 21 ? "padding: 5px 15px 11px 30px;" : 0 %>"><%= @page[:name].upcase %></span></a>
+                <li class="first"><a href="#" onclick="return false;" style="<%= @page[:name].length > 21 ? "padding: 5px 15px 11px 30px;" : 0 %>"><%= @page[:name].upcase %></span></a>
                 <% unless defined?(@additional_controls) %>
                 <div class="menu-world-options">
                   <ul class="menu-regions dropmenu_options" id="navmenu" style="">
