--- a/m4r/views/map_embed.erb
+++ b/m4r/views/map_embed.erb
@@ -3,6 +3,6 @@
 <%= partial :initialize unless @page.new? %>
 <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 <script type="text/javascript" charset="utf-8">
-  jq("#map_embed_container").width(getQuerystring("width", 200))
-  jq("#map_embed_container").height(getQuerystring("height", 200))
+  jq("#map_embed_container").width(parseInt(getQuerystring("width", 200)))
+  jq("#map_embed_container").height(parseInt(getQuerystring("height", 200)))
 </script>
