Hide the sector and layer controls

--- a/m4r/views/full.erb
+++ b/m4r/views/full.erb
@@ -82,10 +82,12 @@
             </div>
       </div>
       <div id="map-area">
+        <% if !defined?(@additional_controls) || !@additional_controls.nil? %>
         <div id="map-content-hdr2">
           <%= partial :layer_controls %>
           <%= partial :sector_controls %>
         </div>
+        <% end %>
         <% if defined?(@additional_controls) && !@additional_controls.nil? %>
         <div id="map-content-hdr3">
         <%= partial @additional_controls %>
